# qfunnel

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: main.py  tables.sqlite
src/qfunnel/: cli.py  format.py  parse_sge.py  program.py  real_backend.py  run_sge.py  tables.sqlite  util.py
tests/: mock_backend.py  test_qfunnel.py
