[tool.poetry]
name = "qfunnel"
version = "0.1.0"
description = "A tool for using CRC resources politely."
authors = ["Brian DuSell <bdusell1@nd.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[tool.poetry.scripts]
qf = "qfunnel.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
